=== x.x.x
 * add NextToken support to Cloudwatch ListMetrics API. (juno)
 * added error handling for Cloudwatch. (juno)

=== 0.9.17 2010-11-21
 * Converted from Jeweler to Bundler, 'bundle install' to install dependencies
 * Adding ability to launch t1.micro instances for ec2 regular and spot price instances
 * Adding support for describe/modify/reset instance attributes with tests.
 * Updated to API version : 2010-08-31
 * Added experimental support for EC2 create_tags, describe_tags, delete_tags
 * Added experimental Eucalyptus support, provide by Sang-Min Park from Eucalyptus.
 * Instead of having hard coded "/" as URL path, the path can be given to as an option. Setup.rb is changed such that server, port, path, and use_ssl can be correctly set up.
 * RDS :db_security_groups should be an Array, not a String.
 * Use HmacSHA256 signatures instead of SHA1 (preferred by AWS and improves support for Eucalyptus)
 * added AWS::EC2::Base#get_password_data for GetPasswordData API (Windows instances)
 * Fix #26.  Raise an exception immediately if the response is a 5xx Server Error.
 * Applied experimental CloudWatch Monitoring Patch by fred-secludit, removes limitations on which server to connect to, and better handles statistics and dimensions.
 * Changed AWS::EC2::Instance from a module to a class to help along an experiment by bdigital
 * Zarro open boogs.  Zarro Open pull requests. W00t

=== 0.9.16 2010-07-07
 * Less strict checking on which server endpoints you can pass in as an environment var.
 * Moved ec2sh script to awshell to better reflect the more comprehensive nature of the gem.
 * Better instructions on using awshell upon running
 * awshell now sets up handles for all of the various services we use, not just @ec2 (+ @as, @rds, @elb, @cw)
 * awshell prints out the various server endpoints that it will actually use in the shell (you can override with env vars).

=== 0.9.11 2010-04-23