@@ -5,11 +5,14 @@ module AWS
 
       # The DescribeVolumes operation lists one or more Amazon EBS volumes that you own, If you do not specify any volumes, Amazon EBS returns all volumes that you own.
       #
-      # @option options [optional, String] :volume_id ([])
+      # @option options [Array<Hash>] :filter ([])
       #
       def describe_volumes( options = {} )
         options = { :volume_id => [] }.merge(options)
         params = pathlist("VolumeId", options[:volume_id] )
+        if options[:filter]
+          params.merge!(pathkvlist('Filter', options[:filter], 'Name', 'Value', {}))
+        end
         return response_generator(:action => "DescribeVolumes", :params => params)
       end
 
